@@ -60,7 +60,6 @@ setup(name='bst-plugins-experimental',
       entry_points={
           'buildstream.plugins': [
               'cmake = bst_plugins_experimental.elements.cmake',
-              'docker = bst_plugins_experimental.sources.docker',
               'dpkg_build = bst_plugins_experimental.elements.dpkg_build',
               'dpkg_deploy = bst_plugins_experimental.elements.dpkg_deploy',
               'flatpak_image = bst_plugins_experimental.elements.flatpak_image',
@@ -87,7 +86,6 @@ setup(name='bst-plugins-experimental',
       tests_require=test_requires + plugin_requires,
       extras_require={
           'ostree': ["PyGObject"],
-          'docker': ["requests"],
           'cargo': ["pytoml"],
       },
       zip_safe=False)
