@@ -1,8 +1,0 @@
-kind: import
-description: Import an Alpine Linux image from Docker hub
-
-sources:
-- kind: docker
-  image: library/alpine
-  track: latest
-  ref: 4b8ffaaa896d40622ac10dc6662204f429f1c8c5714be62a6493a7895f664098
