@@ -7,7 +7,6 @@ plugins:
 - origin: pip
   package-name: bst-plugins-experimental
   sources:
-    docker: 0
     quilt: 0
   elements:
     cmake: 0
