@@ -4,6 +4,7 @@ Next Version
 
 o Add ostree source plugin
 o Forked bst-plugins-experimental from bst-external at 3d52546
+o Removed docker source, it's in bst-plugins-container now
 
 ===================
 bst-external 0.12.0
